# qrai-scanner

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  package-lock.json  package.json
.github/workflows/: npm-publish.yml  security.yml
crates/qrai-core/: Cargo.toml
crates/qrai-core/benches/: validation.rs
crates/qrai-core/examples/: param_benchmark.rs
crates/qrai-core/src/: decoder.rs  lib.rs  types.rs
crates/qrai-node/: Cargo.toml  package.json
crates/qrai-node/src/: lib.rs
crates/qrai-scanner-cli/: Cargo.toml  README.md
crates/qrai-scanner-cli/src/: main.rs
crates/qrai-scanner-core/: Cargo.toml  README.md
crates/qrai-scanner-core/benches/: validation.rs
crates/qrai-scanner-core/examples/: param_benchmark.rs
crates/qrai-scanner-core/src/: lib.rs  scorer.rs
crates/qrai-scanner-node/: CLAUDE.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
crates/qrai-scanner-node/src/: lib.rs
crates/qraisc-cli/: Cargo.toml  README.md
crates/qraisc-cli/src/: main.rs
crates/qraisc-core/: Cargo.toml  README.md
crates/qraisc-core/benches/: validation.rs
crates/qraisc-core/examples/: param_benchmark.rs
crates/qraisc-core/src/: decoder.rs  error.rs  lib.rs  types.rs
crates/qraisc-node/: CLAUDE.md  Cargo.toml  README.md  index.js  package-lock.json  package.json  test-helpers.mjs  test-ok.mjs
crates/qraisc-node/src/: lib.rs
crates/qrcode-ai-scanner-cli/: Cargo.toml  README.md
crates/qrcode-ai-scanner-cli/src/: main.rs
crates/qrcode-ai-scanner-core/: Cargo.toml  README.md
crates/qrcode-ai-scanner-core/benches/: validation.rs
crates/qrcode-ai-scanner-core/examples/: param_benchmark.rs
crates/qrcode-ai-scanner-core/src/: decoder.rs  error.rs  lib.rs
crates/qrcode-ai-scanner-node/: Cargo.toml  README.md  index.js  package-lock.json  package.json
crates/qrcode-ai-scanner-node/src/: lib.rs
docs/: PREPROCESSING_ANALYSIS.md  benchmark-results.json  benchmark-table.md
docs/plans/: 2026-01-02-qrai-validator-design.md  2026-01-02-qrai-validator-implementation.md  performance-optimization.md  v0.2-implementation-plan.md
docs/research/: wasm-optimization-2024-2025.md
examples/: gen_test_qr.rs
scripts/: bench.sh  benchmark-artistic.sh  benchmark.sh  demo.sh  rename-assets-qr.sh  rename-images.sh  rename-with-score.sh  test.sh
test-images/: README.md
