[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperNovae-studio/qrai-scanner"
authors = ["Thibaut <thibaut@supernovae.studio>"]

[workspace.dependencies]
# Decoders
rxing = "0.8"
rqrr = "0.7"

# Image processing
image = "0.25"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
pretty_assertions = "1"
qrcode = "0.14"
criterion = { version = "0.5", features = ["html_reports"] }

# Release optimizations
[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

# Fast compile for dev
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
