[package]
name = "qrcode-ai-scanner-cli"
version.workspace = true
edition.workspace = true
description = "CLI for QR code validation and scannability scoring"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["qrcode", "qr", "scanner", "cli", "validation"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[[bin]]
name = "qrcode-ai"
path = "src/main.rs"

[dependencies]
qrcode-ai-scanner-core = { path = "../qrcode-ai-scanner-core" }
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
