[package]
name = "qrcode-ai-scanner-node"
version.workspace = true
edition.workspace = true
description = "Node.js bindings for QR code validation - supports artistic, image-embedded, custom styled, and photo-captured QR codes"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
qrcode-ai-scanner-core = { path = "../qrcode-ai-scanner-core" }
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"
